# identifications

./: .buildconfig  .gitignore  README.md  com.github.edenalencar.identifications.json  constants.vala.in  index.md  meson.build
.github/workflows/: blank.yml  build.yml  main.yml
data/: com.github.edenalencar.identifications.appdata.xml.in  com.github.edenalencar.identifications.desktop.in  com.github.edenalencar.identifications.gschema.xml  meson.build
help/: meson.build
help/C/: cnpj.page  cpf.page  ie.page  index.page
help/pt_BR/: pt_BR.po
po/: POTFILES  com.github.edenalencar.identifications.pot  meson.build  pt_BR.po
src/: identifications.gresource.xml  meson.build
src/classes/bu/: identification-cnpj.vala  identification-cpf.vala  identification-ie-ac.vala  identification-ie-al.vala  identification-ie-am.vala  identification-ie-ap.vala  identification-ie-ba.vala  identification-ie-ce.vala  identification-ie-df.vala  identification-ie-es.vala  identification-ie-factory.vala  identification-ie-go.vala  identification-ie-ma.vala  identification-ie-mg.vala  identification-ie-ms.vala  identification-ie-mt.vala  identification-ie-pa.vala  identification-ie-pb.vala  identification-ie-pe.vala  identification-ie-pi.vala  identification-ie-pr.vala  identification-ie-rj.vala  identification-ie-rn.vala  identification-ie-ro.vala  identification-ie-rr.vala  identification-ie-rs.vala  identification-ie-sc.vala  identification-ie-se.vala  identification-ie-sp.vala  identification-ie-to.vala  identification.vala
src/classes/model/: identification-model.vala
src/classes/view/: main.vala  menu.vala  window.vala
src/ui/: menu.ui  shortcuts.ui  window.ui
